@@ -1,3 +1,12 @@
+Fri May 18 17:38:27 UTC 2012  Adam Mitz  <mitza@ociweb.com>
+
+        * dds/idl/dds_generator.h:
+        * dds/idl/marshal_generator.cpp:
+
+          Leave out the name of the parameter for gen_is_bounded_size().
+          This removes the necessity for ACE_UNUSED_ARG, which may be seen as
+          a read of unitialized data by Coverity.
+
 Fri May 18 15:50:29 UTC 2012  Adam Mitz  <mitza@ociweb.com>
 
         * dds/DCPS/transport/shmem/ShmemReceiveStrategy.cpp:
